--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.8.2",
     "@tailwindcss/vite": "^4.1.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
     "react-image-magnify": "^2.7.4",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "react-tabs": "^6.1.0",
     "swiper": "^11.2.6",
